<?xml version="1.0"?>
<package format="3">
  <name>amr_elevator_plugin</name>
  <version>0.0.1</version>
  <description>Gazebo plugin to trigger elevator commands based on robot pose</description>
  <maintainer email="azif@example.com">Mohammed Azif</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_srvs</depend>
  <depend>gazebo</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
