<?xml version="1.0"?>
<package format="3">
  <name>object_spawn_plugin</name>
  <version>0.0.1</version>
  <description>Gazebo plugin that spawns and removes objects randomly</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies -->
  <depend>rclcpp</depend>
  <depend>gazebo</depend>
  <depend>gazebo_ros</depend>

  <export>
    <gazebo_ros plugin="${prefix}/lib/libobject_spawn_plugin.so"/>
  </export>
</package>
