<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pipeline_manipulator</name>
  <version>0.0.1</version>
  <description>FSM-based mobile manipulator pipeline using only existing Nav2 actions</description>
  <maintainer email="syedazif321@gmail.com">azif</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>

  <depend>cv_bridge</depend>
  <depend>opencv2</depend>

  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>message_filters</depend>
  <depend>nav2_msgs</depend>

  <depend>moveit_ros_planning_interface</depend>

  <depend>control_msgs</depend>
  <depend>msg_gazebo</depend>
  <depend>nlohmann_json_vendor</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>