<?xml version="1.0"?>
<package format="3">
  <name>mobile_manipulator_bringup</name>
  <version>0.0.1</version>
  <description>Bringup and launch files for mobile manipulator</description>
  <maintainer email="you@example.com">Azif</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>position_controllers</exec_depend>
  <exec_depend>mobile_manipulator_description</exec_depend>
  <exec_depend>mobile_manipulator_control</exec_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
