<?xml version="1.0"?>
<package format="3">
  <name>mobile_manipulator_description</name>
  <version>0.0.1</version>
  <description>URDF and meshes for mobile manipulator with linear guide</description>
  <maintainer email="you@example.com">Azif</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
